Fix alt atribute in src tags

--- a/student/artifacts.html
+++ b/student/artifacts.html
@@ -79,7 +79,7 @@
                     <div class="card">
                         <p class="text_on_card_1">Exploring a dungeon</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                         </div>
                         <ul>
                             <li>
@@ -94,7 +94,7 @@
                     <div class="card_from_mentor">
                         <p class="text_on_card_1">Solving the puzzle</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                         </div>
 
                         <ul>
@@ -111,7 +111,7 @@
                     <div class="card">
                         <p class="text_on_card_1">Slaying a dragon</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                         </div>
 
                         <ul>
@@ -136,7 +136,7 @@
 
                         <p class="text_on_card_1">Spot trap</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                         </div>
                         <ul>
                             <li>
@@ -152,7 +152,7 @@
                     <div class="card">
                         <p class="text_on_card_1">Taming a pet</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                         </div>
 
                         <ul>
@@ -169,7 +169,7 @@
                     <div class="card_from_mentor">
                         <p class="text_on_card_1">Recruiting some n00bs</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                         </div>
                         <ul>
                             <li>
@@ -194,7 +194,7 @@
 
                     <p class="text_on_card_1">Spot trap</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -210,7 +210,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Taming a pet</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
 
                     <ul>
@@ -227,7 +227,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Recruiting some n00bs</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -249,7 +249,7 @@
 
                     <p class="text_on_card_1">Forging weapons</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -265,7 +265,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Master the mornings</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
 
                     <ul>
@@ -282,7 +282,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Fast as an unicorn</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -305,7 +305,7 @@
 
                     <p class="text_on_card_1">Achiever</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -321,7 +321,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Fortune</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
 
                     <ul>
@@ -338,7 +338,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Creat an scroll</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -358,7 +358,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Achiever</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
@@ -374,7 +374,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Enter the arena</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
 
                     <ul>
@@ -390,7 +390,7 @@
                 <div class="card">
                     <p class="text_on_card_1">Creat an scroll</p>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
                     </div>
                     <ul>
                         <li>
