Add logo to login page Change fonts in header

--- a/login.html
+++ b/login.html
@@ -16,6 +16,11 @@
 <body>
     <div class="page_content">
 
+        <figure>
+            <img id="logo" src="img/logo.png" alt="logo">
+        </figure>
+
+
         <div class="login_content">
             <form name="login_form" id="login_form">
                 <label for="login">Login:</label>
