Clean alt atributes

--- a/mentor/artifacts.html
+++ b/mentor/artifacts.html
@@ -56,7 +56,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Combat training</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -74,7 +74,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1"><input type="text" placeholder="Title of card / quest..."></p>
                         <div id="pictures_on_card_workshop">
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
 
                             <button id="button_basic_quest" type="button">Basic Item</button>
                             <button id="button_extra_quest" type="button">Magic Item</button>
@@ -101,7 +101,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Combat training</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -117,7 +117,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Sanctuary</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -134,7 +134,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Time Travel</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -156,7 +156,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Circle of Sorcery</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -173,7 +173,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Code Elemental</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -191,7 +191,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Tome of knowledge</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -212,7 +212,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Transform mentors</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -230,7 +230,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Teleport</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
