--- a/mentor/quests.html
+++ b/mentor/quests.html
@@ -57,7 +57,7 @@
                     <div class="card">
                         <p class="text_on_card_1">Exploring a dungeon</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                         </div>
                         <ul>
                             <li>
@@ -73,7 +73,7 @@
                     <div class="card" id="create_quest_card">
                         <p class="text_on_card_1"><input id="input_card_title" type="text" placeholder="Title of card / quest..."></p>
                         <div id="pictures_on_card_workshop">
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
 
                             <button id="button_basic_quest" type="button">Basie Quest</button>
                             <button id="button_extra_quest" type="button">Extra Quest</button>
@@ -98,7 +98,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Exploring a dungeon</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -114,7 +114,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Solving the puzzle</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
 
                             <ul>
@@ -131,7 +131,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Slaying a dragon</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -148,8 +148,8 @@
                     <!-- empty card   -->
                     <div class="row_card">
 
-                            <div id="new_card" >
-                            </div>
+                        <div id="new_card">
+                        </div>
 
                         <!-- <div class="card_empty" id="empty_card_1">
                             <p class="text_on_card_1" id="empty_card_title"></p>
@@ -178,7 +178,7 @@
 
                             <p class="text_on_card_1">Spot trap</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -197,7 +197,7 @@
 
                             <p class="text_on_card_1">Taming a pet</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
 
                             <ul>
@@ -215,7 +215,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Recruiting some n00bs</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -238,7 +238,7 @@
 
                             <p class="text_on_card_1">Forging weapons</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -255,7 +255,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Master the mornings</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
 
                             <ul>
@@ -273,7 +273,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Fast as an unicorn</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -295,7 +295,7 @@
 
                             <p class="text_on_card_1">Achiever</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -313,7 +313,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Fortune</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
 
                             <ul>
@@ -332,7 +332,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Creat an scroll</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -355,7 +355,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Achiever</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
@@ -374,7 +374,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Enter the arena</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
 
                             <ul>
@@ -393,7 +393,7 @@
                         <div class="card">
                             <p class="text_on_card_1">Creat an scroll</p>
                             <div>
-                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes!!" />
+                                <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of  heroes" />
                             </div>
                             <ul>
                                 <li>
