--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -73,7 +73,7 @@
 
                     <span class="text_on_card_1">Exploring a dungeon</span>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                     </div>
                     <ul>
                         <li><span class="text_on_card_2">Finishing a Teamwork week</span></li>
@@ -92,7 +92,7 @@
 
                     <span class="text_on_card_1">Exploring a dungeon</span>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                     </div>
                     <ul>
                         <li><span class="text_on_card_2">Finishing a Teamwork week</span></li>
@@ -110,7 +110,7 @@
                 <div class="card">
                     <span class="text_on_card_1">Exploring a dungeon</span>
                     <div>
-                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                     </div>
                     <ul>
                         <li><span class="text_on_card_2">Finishing a Teamwork week</span></li>
