--- a/student/store.html
+++ b/student/store.html
@@ -81,7 +81,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Combat training</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -99,7 +99,7 @@
 
                         <p class="text_on_card_1">Sanctuary</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -116,7 +116,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Time Travel</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -142,7 +142,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Circle of Sorcery</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -158,7 +158,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Code Elemental</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -175,7 +175,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Tome of knowledge</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -194,7 +194,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Transform mentors</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -213,7 +213,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Teleport</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero!" />
+                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
