--- a/front-end/mentor/artifacts.html
+++ b/front-end/mentor/artifacts.html
@@ -17,9 +17,9 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img src="../img/logo.png" alt="logo">
+                    <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
-                <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a id="logout" href="../login.html"><img src="../img/logout.png" alt="logout"></a>
             </div>
 
             <nav>
